<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:text="@string/textViewTexto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTexto1"
        android:paddingTop="100dp" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="Nickname"
        android:id="@+id/editTextNombre"
        android:gravity="center_vertical|center" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1" />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:text="@string/jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonJugar"
            android:layout_weight="1" />

        <Button
            android:text="@string/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVolver"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>